data/issues_raw/buildinstall/buildinstall_train_12166.txt
build android

ERROR: /home/wangmeng/RSTensorFlow_mobile/tensorflow/examples/android/BUILD:67:1: Building tensorflow/examples/android/libtensorflow_demo.jar (23 source files) failed: Worker process sent response with exit code: 1.
tensorflow/examples/android/src/org/tensorflow/demo/StylizeActivity.java:365: error: constructor TensorFlowInferenceInterface in class TensorFlowInferenceInterface cannot be applied to given types;
inferenceInterface = new TensorFlowInferenceInterface(getAssets(), MODEL_FILE);
^
required: no arguments
found: AssetManager,String
reason: actual and formal argument lists differ in length
tensorflow/examples/android/src/org/tensorflow/demo/StylizeActivity.java:544: error: cannot find symbol
inferenceInterface.feed(
^
symbol:   method feed(String,float[],int,int,int,int)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/StylizeActivity.java:546: error: cannot find symbol
inferenceInterface.feed(STYLE_NODE, styleVals, NUM_STYLES);
^
symbol:   method feed(String,float[],int)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/StylizeActivity.java:548: error: cannot find symbol
inferenceInterface.run(new String[] {OUTPUT_NODE}, isDebug());
^
symbol:   method run(String[],boolean)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/StylizeActivity.java:549: error: cannot find symbol
inferenceInterface.fetch(OUTPUT_NODE, floatValues);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowImageClassifier.java:90: error: constructor TensorFlowInferenceInterface in class TensorFlowInferenceInterface cannot be applied to given types;
c.inferenceInterface = new TensorFlowInferenceInterface(assetManager, modelFilename);
^
required: no arguments
found: AssetManager,String
reason: actual and formal argument lists differ in length
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowImageClassifier.java:93: error: cannot find symbol
final Operation operation = c.inferenceInterface.graphOperation(outputName);
^
symbol:   method graphOperation(String)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowImageClassifier.java:132: error: cannot find symbol
inferenceInterface.feed(inputName, floatValues, 1, inputSize, inputSize, 3);
^
symbol:   method feed(String,float[],int,int,int,int)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowImageClassifier.java:137: error: cannot find symbol
inferenceInterface.run(outputNames, logStats);
^
symbol:   method run(String[],boolean)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowImageClassifier.java:142: error: cannot find symbol
inferenceInterface.fetch(outputName, outputs);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowMultiBoxDetector.java:90: error: constructor TensorFlowInferenceInterface in class TensorFlowInferenceInterface cannot be applied to given types;
d.inferenceInterface = new TensorFlowInferenceInterface(assetManager, modelFilename);
^
required: no arguments
found: AssetManager,String
reason: actual and formal argument lists differ in length
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowMultiBoxDetector.java:221: error: cannot find symbol
inferenceInterface.feed(inputName, floatValues, 1, inputSize, inputSize, 3);
^
symbol:   method feed(String,float[],int,int,int,int)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowMultiBoxDetector.java:226: error: cannot find symbol
inferenceInterface.run(outputNames, logStats);
^
symbol:   method run(String[],boolean)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowMultiBoxDetector.java:233: error: cannot find symbol
inferenceInterface.fetch(outputNames[0], outputLocationsEncoding);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowMultiBoxDetector.java:234: error: cannot find symbol
inferenceInterface.fetch(outputNames[1], outputScoresEncoding);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowSingleShotDetector.java:68: error: constructor TensorFlowInferenceInterface in class TensorFlowInferenceInterface cannot be applied to given types;
d.inferenceInterface = new TensorFlowInferenceInterface(assetManager, modelFilename);
^
required: no arguments
found: AssetManager,String
reason: actual and formal argument lists differ in length
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowSingleShotDetector.java:98: error: cannot find symbol
inferenceInterface.feed(inputName, bytePixels, 1, inputSize, inputSize, 3);
^
symbol:   method feed(String,byte[],int,int,int,int)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowSingleShotDetector.java:105: error: cannot find symbol
inferenceInterface.run(outputNames, logStats);
^
symbol:   method run(String[],boolean)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowSingleShotDetector.java:114: error: cannot find symbol
inferenceInterface.fetch(outputNames[3], numDetectionsArray);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowSingleShotDetector.java:119: error: cannot find symbol
inferenceInterface.fetch(outputNames[0], boxes);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowSingleShotDetector.java:120: error: cannot find symbol
inferenceInterface.fetch(outputNames[1], scores);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowSingleShotDetector.java:121: error: cannot find symbol
inferenceInterface.fetch(outputNames[2], classes);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowYoloDetector.java:107: error: constructor TensorFlowInferenceInterface in class TensorFlowInferenceInterface cannot be applied to given types;
d.inferenceInterface = new TensorFlowInferenceInterface(assetManager, modelFilename);
^
required: no arguments
found: AssetManager,String
reason: actual and formal argument lists differ in length
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowYoloDetector.java:154: error: cannot find symbol
inferenceInterface.feed(inputName, floatValues, 1, inputSize, inputSize, 3);
^
symbol:   method feed(String,float[],int,int,int,int)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowYoloDetector.java:161: error: cannot find symbol
inferenceInterface.run(outputNames, logStats);
^
symbol:   method run(String[],boolean)
location: variable inferenceInterface of type TensorFlowInferenceInterface
tensorflow/examples/android/src/org/tensorflow/demo/TensorFlowYoloDetector.java:172: error: cannot find symbol
inferenceInterface.fetch(outputNames[0], output);
^
symbol:   method fetch(String,float[])
location: variable inferenceInterface of type TensorFlowInferenceInterface
Target //tensorflow/examples/android:tensorflow_demo failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 19.243s, Critical Path: 7.19s
FAILED: Build did NOT complete successfully